--- a/index.html
+++ b/index.html
@@ -128,12 +128,13 @@
         <a href="Docs/MyResume(TSL).docx" download class="btn btn2">Download CV</a>
       </div>
       <div class="contact-right">
-        <form onsubmit="submit(); reset(); return false;">
+        <form name="submit-to-google-sheet">
           <input type="text" name="Name" placeholder="Your Name" required>
           <input type="email" name="Email" placeholder="Your Email" required>
           <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
           <button type="submit" class="btn btn2">Submit</button>
         </form>
+        <span id="msg"></span>
       </div>
     </div>
   </div>
@@ -167,24 +168,23 @@ function opentab(tabname){
       sidemenu.style.right="-200px";
     }
    </script>
-   <script src=" https://smtpjs.com/v3/smtp.js"></script>
    <script>
-    function submit(){
-      Email.send({
-    Host : "smtp.gmail.com",
-    Username : "tsuresh8055@gmail.com",
-    Password : "Tsuri@8055",
-    To : 'tsuresh8055@gmail.com',
-    From : document.getElementById("email").value,
-    Subject : "New contact from Enquiry",
-    Body : "Name: "+document.getElementById("text").value
-        +"<br> Email: "+document.getElementById("email").value
-        +"<br> Message: "+ document.getElementById("Message").value
-}).then(
-  message => alert("message sent Succesfully" )
-);
-    }
-   </script>
-
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbzo7DxNFTZIjt3peiIpJtniV61O_lNo3UtyYj9vx9VJnjmglZTgFZ13FCHSTFLMVHel/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg=document.getElementById("msg")
+  
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+          msg.innerHTML="Message sent Successfully"
+          setTimeout(function(){
+            msg.innerHTML=""
+          },5000)
+          form.reset()
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 </body>
 </html>
